# imkitchen

./: .cargo-watch.toml  .clippy.toml  .dockerignore  .env  .env.example  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  06_v0.8_rollback.sql  CLAUDE.md  CLI-IMPORT-RECIPE.md  CONFIGURATION.md  Cargo.toml  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.backend  Dockerfile.dev  Dockerfile.frontend  Makefile  PROJECT_GUIDELINES.md  README.md  SECURITY.md  askama.toml  audit.toml  builder.Dockerfile  compose.yml  cookies.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  example-recipe.json  flake.nix  generate_multiweek.rs  imkitchen.toml  jest.config.mjs  jest.setup.js  (+15 more)
crates/billing/: Cargo.toml
crates/billing/src/: invoice.rs  invoice_user.rs  lib.rs  scheduler.rs
crates/contact/: Cargo.toml
crates/contact/src/: aggregator.rs  command.rs  event.rs  lib.rs  query.rs  types.rs  value_object.rs
crates/contact/tests/: list.rs  mark_as_read_and_replay.rs  mark_read_and_replay.rs  reopen.rs  resolved.rs  safety_check.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: contact.rs  mealplan.rs  recipe.rs  shopping.rs
crates/db/: Cargo.toml
crates/db/src/: contact_admin.rs  contact_global_stat.rs  fts.rs  lib.rs  mealplan_recipe.rs  mealplan_slot.rs  notification_recipient.rs  origin_framing.rs  recipe_comment.rs  recipe_owner.rs  recipe_thumbnail.rs  recipe_user.rs  recipe_user_stat.rs  shopping_list.rs  shopping_recipe.rs  shopping_slot.rs  table.rs  types.rs  user.rs  user_admin.rs  user_global_stat.rs  user_invoice_user.rs  user_login.rs  user_subscription.rs
crates/identity/: Cargo.toml
crates/identity/src/: lib.rs  repository.rs
crates/identity/tests/: change_email.rs  login.rs  profile.rs  register.rs  safety_check.rs  suspend.rs
crates/imkitchen-core/: Cargo.toml
crates/imkitchen-core/src/: lib.rs
crates/imkitchen-notification/: Cargo.toml
crates/imkitchen-notification/src/: lib.rs
crates/imkitchen-notification/tests/: integration.rs
crates/imkitchen-shared/: Cargo.toml
crates/imkitchen-shared/src/: auth_types.rs  lib.rs
crates/imkitchen-shared/tests/: integration_test.rs
crates/imkitchen-shopping/: Cargo.toml
crates/imkitchen-user/: Cargo.toml
crates/imkitchen-user/src/: aggregate.rs  command.rs  event.rs  event_store.rs  lib.rs
crates/imkitchen-user/tests/: domain_test.rs  tdd_template_validation.rs
crates/imkitchen-web/: Cargo.toml  optimize-js.sh  package-lock.json  package.json  static-asset-performance.md  tailwind.config.js
crates/imkitchen-web/src/: db.rs  lib.rs  main.rs  metrics.rs  shutdown.rs
crates/imkitchen-web/static/: manifest.json  sw.js
crates/imkitchen-web/tests/: async_validation_test.rs  auth_routes_test.rs  auth_validation_test.rs  integration_auth_flow_test.rs  integration_auth_tests.rs  middleware_tests.rs  pwa_tests.rs  rating_handlers.rs  unit_tests.rs
crates/meal_planning/: Cargo.toml
crates/meal_planning/benches/: algorithm_benchmarks.rs
crates/meal_planning/src/: aggregate.rs  algorithm.rs  commands.rs  constraints.rs  dietary_filter.rs  error.rs  events.rs  lib.rs  page_specific_projections.rs  page_specific_queries.rs  read_model.rs  rotation.rs
crates/meal_planning/tests/: algorithm_reasoning_tests.rs  constraints_tests.rs  epic6_story63_tests.rs  integration_tests_story_7_7.rs  multi_week_projection_tests.rs  persistence_tests.rs  reasoning_persistence_tests.rs  rotation_integration_tests.rs  test_single_week_generation.rs
crates/mealplan/: Cargo.toml
crates/mealplan/src/: aggregator.rs  command.rs  event.rs  lib.rs  query.rs  service.rs  types.rs  value_object.rs
crates/mealplan/tests/: generate.rs
crates/notification/: Cargo.toml
crates/notification/locales/: fr.json
crates/notification/src/: billing.rs  contact.rs  lib.rs  recipient.rs  service.rs  template.rs  user.rs
crates/notification/templates/: invoice-created.html  invoice-created.txt  reset-password.html  reset-password.txt  subscription-cancelled.html  subscription-cancelled.txt
crates/notifications/: Cargo.toml
crates/notifications/src/: aggregate.rs  commands.rs  events.rs  lib.rs  push.rs  read_model.rs  scheduler.rs
crates/recipe/: Cargo.toml
crates/recipe/src/: aggregate.rs  aggregator.rs  collection_aggregate.rs  collection_commands.rs  collection_events.rs  command.rs  commands.rs  error.rs  event.rs  events.rs  lib.rs  page_specific_projections.rs  page_specific_queries.rs  query.rs  read_model.rs  tagging.rs  types.rs  value_object.rs
crates/recipe/tests/: batch_import_tests.rs  collection_tests.rs  delete.rs  list.rs  rating_tests.rs  recipe_epic6_tests.rs  recipe_story_9_4_tests.rs  recipe_tests.rs  update.rs
crates/shared/: Cargo.toml
crates/shared/src/: command.rs  date.rs  event.rs  lib.rs
crates/shopping/: Cargo.toml
crates/shopping/src/: aggregate.rs  aggregation.rs  aggregator.rs  ambiguous.rs  categorization.rs  command.rs  commands.rs  events.rs  fraction_utils.rs  lib.rs  page_specific_projections.rs  page_specific_queries.rs  read_model.rs  subscription.rs
crates/shopping/tests/: checkbox_tests.rs  ingredient_aggregation_enhanced_tests.rs  integration_tests.rs  recalculation_tests.rs
crates/user/: Cargo.toml
crates/user/src/: aggregate.rs  aggregator.rs  command.rs  command_old.rs  commands.rs  error.rs  event.rs  events.rs  invoice.rs  jwt.rs  lib.rs  password.rs  query.rs  read_model.rs  repository.rs  scheduler.rs  types.rs  value_object.rs
crates/user/tests/: aggregate_tests.rs  command_tests.rs  list.rs  login.rs  password_tests.rs  profile.rs  register.rs  safety_check.rs  subscription_tests.rs  suspend.rs  toggle_life_premium.rs
web/admin/: Cargo.toml
web/admin/src/: import.rs  lib.rs
web/admin/tests/: import.rs  thumbnail.rs
web/demo/: Cargo.toml
web/grocery/: Cargo.toml
web/kitchen/: Cargo.toml
web/menu/: Cargo.toml
web/public/: Cargo.toml
web/recipe/: Cargo.toml
web/settings/: Cargo.toml  askama.toml
web/shared/: Cargo.toml
(+2425 files in other folders)
