[workspace]
members = [
	"crates/*",
]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["imkitchen team"]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12", features = ["cookie", "form", "query", "typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "compression-br", "compression-gzip"] }
rust-i18n = "3.1"
time-tz = "3.0.0-rc.5.0.0"
askama = "0.15"
cfg-if = "1.0"
sqlx = { version = "0.8", default-features = false, features = ["migrate", "json", "derive", "runtime-tokio", "sqlite"] }
sqlx_migrator = { version = "0.18", features = ["sqlite"] }
evento = { version = "2.0.0-alpha.10", features = ["sqlite", "rw"] }
argon2 = { version = "0.5", features = ["std"] }
jsonwebtoken = { version = "10.1", features = ["aws_lc_rs"] }
lettre = { version = "0.11", features = ["rustls-tls", "builder"] }
async-stripe = { version = "0.41", features = ["runtime-tokio-hyper", "webhook-events"] }
validator = { version = "0.20", features = ["derive"] }
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", features = ["toml"] }
bitcode = "0.6"
rust-embed = "8.8"
mime_guess = "2.0"
urlencoding = "2.1"
base64 = "0.22"
url = "2.5"
minify-html = "0.18"
ulid = "1.2"
sea-query = { version = "1.0.0-rc.27", default-features = false, features = ["derive", "audit", "backend-sqlite"] }
sea-query-sqlx = { version = "0.8.0-rc.10", features = ["runtime-tokio", "sqlx-sqlite", "with-json"] }
async-trait = "0.1"
futures = "0.3"
time = { version = "0.3", features = ["formatting"] }
strum = { version = "0.27", features = ["derive"] }
sha3 = "0.10"
temp-dir = "0.1"
rand = "0.9"
tokio-cron-scheduler = "0.15"

[package]
name = "imkitchen"
version = "0.12.8"
edition.workspace = true

[package.metadata.cargo-machete]
ignored = []

[package.metadata.cargo-machete.renamed]
async-stripe = "stripe"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
rust-i18n = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
askama = { workspace = true }
sqlx = { workspace = true }
evento = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
minify-html = { workspace = true }
jsonwebtoken = { workspace = true }
futures = { workspace = true }
time = { workspace = true }
strum = { workspace = true }
cfg-if = { workspace = true }
imkitchen-shared = { path = "crates/shared", version = "0.12.8" }
imkitchen-contact = { path = "crates/contact", version = "0.12.8" }
imkitchen-recipe = { path = "crates/recipe", version = "0.12.8" }
imkitchen-mealplan = { path = "crates/mealplan", version = "0.12.8" }
imkitchen-shopping = { path = "crates/shopping", version = "0.12.8" }
imkitchen-user = { path = "crates/user", version = "0.12.8" }
imkitchen-db = { path = "crates/db", version = "0.12.8" }
imkitchen-notification = { path = "crates/notification", version = "0.12.8" }

[dev-dependencies]
http-body-util = "0.1"
serde_urlencoded = "0.7"

[[bin]]
name = "imkitchen"
path = "src/main.rs"

[lib]
name = "imkitchen"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true

[profile.dev]
opt-level = 1

[profile.dev.package.'*']
opt-level = 3
