[package]
name = "imkitchen-contact"
version = "0.13.1"
edition.workspace = true
authors.workspace = true

[dependencies]
evento.workspace = true
time.workspace = true
bitcode.workspace = true
anyhow.workspace = true
validator = { workspace = true }
sqlx = { workspace = true }
serde.workspace = true
strum.workspace = true
sea-query.workspace = true
sea-query-sqlx.workspace = true
imkitchen-shared = { path = "../shared", version = "0.13.1" }
imkitchen-db = { path = "../db", version = "0.13.1" }

[dev-dependencies]
tokio.workspace = true
temp-dir.workspace = true
futures.workspace = true
