[package]
name = "imkitchen-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[package.metadata.cargo-machete]
ignored = []

[dependencies]
evento.workspace = true
bitcode.workspace = true
anyhow.workspace = true
thiserror.workspace = true
argon2.workspace = true
validator = { workspace = true }
sqlx = { workspace = true }
image = { workspace = true }
webp = { workspace = true }
strum.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
sea-query.workspace = true
sea-query-sqlx.workspace = true
time = { workspace = true }
rand = { workspace = true }
tracing.workspace = true
time-tz.workspace = true
imkitchen-types = { path = "../types", version = "0.15.8" }
imkitchen-db = { path = "../db", version = "0.15.8" }

[dev-dependencies]
tokio.workspace = true
temp-dir.workspace = true
