[package]
name = "imkitchen-db"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
evento.workspace = true
anyhow.workspace = true
sqlx.workspace = true
sqlx_migrator.workspace = true
sea-query.workspace = true
sea-query-sqlx.workspace = true
async-trait.workspace = true

