[package]
name = "imkitchen-identity"
version = "1.0.2"
edition.workspace = true
authors.workspace = true

[package.metadata.cargo-machete]
ignored = []

[dependencies]
evento.workspace = true
anyhow.workspace = true
bitcode.workspace = true
validator = { workspace = true }
regex = { workspace = true }
argon2.workspace = true
sqlx = { workspace = true }
strum.workspace = true
time = { workspace = true }
ulid = { workspace = true }
sea-query.workspace = true
sea-query-sqlx.workspace = true
serde.workspace = true
imkitchen-types = { path = "../types", version = "1.0.2" }
imkitchen-core = { path = "../core", version = "1.0.2" }
imkitchen-billing = { path = "../billing", version = "1.0.2" }
imkitchen-db = { path = "../db", version = "1.0.2" }

[dev-dependencies]
tokio.workspace = true
temp-dir.workspace = true
