[package]
name = "imkitchen-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database
sqlx = { workspace = true }

# Async Runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
serde = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Events (disabled due to compilation issues)
# evento = { workspace = true }

# Internationalization
rust-i18n = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# Local Dependencies
imkitchen-shared = { path = "../imkitchen-shared" }
