[package]
name = "imkitchen-notification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
lettre = "0.11"
tokio = { workspace = true, features = ["full"] }
askama = { workspace = true }
# Temporarily disabled unused dependencies
# evento = { workspace = true }
imkitchen-shared = { path = "../imkitchen-shared" }

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"