[package]
name = "imkitchen-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
evento = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0"