[package]
name = "imkitchen-shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
lazy_static = "1.5"
regex = "1.11"
bcrypt = "0.17"
# bincode = "1.3"
# Temporarily disabled unused dependencies
# evento = { workspace = true }
# thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
