[package]
name = "imkitchen-user"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
imkitchen-shared = { path = "../imkitchen-shared" }

[dev-dependencies]
tokio = { workspace = true }
