[package]
name = "imkitchen-user"
version.workspace = true
edition.workspace = true

[dependencies]
# Unused - will be needed when implementing user domain
# evento.workspace = true
# sqlx.workspace = true
# tokio.workspace = true
# validator.workspace = true
# anyhow.workspace = true
# serde.workspace = true
# bincode.workspace = true
# tracing.workspace = true
