[package]
name = "imkitchen-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tracing = { workspace = true }
askama = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
prometheus = { workspace = true }
validator = { workspace = true }
tower-http = { version = "0.6", features = ["fs", "trace"] }
rand = "0.8"
base64 = "0.22"
urlencoding = "2.1"

# Internal dependencies
imkitchen-shared = { path = "../imkitchen-shared" }
imkitchen-user = { path = "../imkitchen-user" }
imkitchen-recipe = { path = "../imkitchen-recipe" }

[dev-dependencies]
tower = "0.5"
urlencoding = "2.1"
