[package]
name = "meal_planning"
version = "0.7.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlx = { workspace = true }
evento = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rand = "0.9"
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
