[package]
name = "meal_planning"
version = "0.8.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlx = { workspace = true }
evento = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rand = "0.9"
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
recipe = { path = "../recipe", version = "0.8.0" }
user = { path = "../user", version = "0.8.0" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = "0.7"

[[bench]]
name = "algorithm_benchmarks"
harness = false
