[package]
name = "imkitchen-mealplan"
version = "0.12.7"
edition.workspace = true
authors.workspace = true

[dependencies]
evento.workspace = true
bincode.workspace = true
anyhow.workspace = true
sqlx = { workspace = true, optional = true }
time = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
cfg-if.workspace = true
tracing.workspace = true
strum.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
sea-query.workspace = true
sea-query-sqlx.workspace = true
imkitchen-shared = { path = "../shared", version = "0.12.7" }
imkitchen-db = { path = "../db", version = "0.12.7", optional = true }
imkitchen-recipe = { path = "../recipe", version = "0.12.7", default-features = false, optional = true }
imkitchen-user = { path = "../user", version = "0.12.7", default-features = false, features = ["imkitchen-recipe"], optional = true }

[dev-dependencies]
tokio.workspace = true
temp-dir.workspace = true
futures.workspace = true
time = { workspace = true, features = ["formatting", "macros"] }
imkitchen-recipe = { path = "../recipe", version = "0.12.7", features = ["default"] }

[features]
default = ["full", "imkitchen-recipe", "imkitchen-user"]
full = ["sqlx", "serde_json", "imkitchen-db", "time", "rand"]
