[package]
name = "imkitchen-mealplan"
version = "0.12.8"
edition.workspace = true
authors.workspace = true

[dependencies]
evento.workspace = true
bitcode.workspace = true
anyhow.workspace = true
sqlx = { workspace = true }
time = { workspace = true }
rand = { workspace = true }
tracing.workspace = true
time-tz.workspace = true
serde_json = { workspace = true }
sea-query.workspace = true
sea-query-sqlx.workspace = true
imkitchen-shared = { path = "../shared", version = "0.12.8" }
imkitchen-db = { path = "../db", version = "0.12.8" }

[dev-dependencies]
tokio.workspace = true
temp-dir.workspace = true
futures.workspace = true
time = { workspace = true, features = ["formatting", "macros"] }
imkitchen-recipe = { path = "../recipe", version = "0.12.8" }

