[package]
name = "imkitchen-notification"
version = "1.0.11"
edition.workspace = true
authors.workspace = true

[dependencies]
askama = { workspace = true }
lettre = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
rust-i18n = { workspace = true }
time = { workspace = true }
evento.workspace = true
sea-query = { workspace = true }
sea-query-sqlx = { workspace = true }
sqlx = { workspace = true }
imkitchen-billing = { path = "../billing", version = "1.0.11" }
imkitchen-core = { path = "../core", version = "1.0.11" }
imkitchen-db = { path = "../db", version = "1.0.11" }
imkitchen-types = { path = "../types", version = "1.0.11" }
imkitchen-identity = { path = "../identity", version = "1.0.11" }
