[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
evento = { version = "1.4", features = ["sqlite-migrator"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"
web-push = { version = "0.10", features = ["isahc-client"] }
isahc = "1.7"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["serde", "v4"] }
meal_planning = { path = "../meal_planning", version = "0.3.0" }
base64 = "0.22"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
