[package]
name = "notifications"
version = "0.7.2"
edition.workspace = true

[dependencies]
evento = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
web-push = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
meal_planning = { path = "../meal_planning", version = "0.7.2" }
base64 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
