[package]
name = "imkitchen-recipe"
version = "0.12.8"
edition.workspace = true
authors.workspace = true

[dependencies]
evento.workspace = true
bitcode.workspace = true
ulid.workspace = true
anyhow.workspace = true
validator = { workspace = true }
sqlx = { workspace = true }
strum.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
cfg-if.workspace = true
sea-query.workspace = true
sea-query-sqlx.workspace = true
imkitchen-shared = { path = "../shared", version = "0.12.8" }
imkitchen-db = { path = "../db", version = "0.12.8" }

[dev-dependencies]
tokio.workspace = true
temp-dir.workspace = true

