[package]
name = "imkitchen-shared"
version = "0.9.3"
edition.workspace = true
authors.workspace = true

[dependencies]
evento.workspace = true
bincode.workspace = true
anyhow.workspace = true
validator.workspace = true
argon2.workspace = true
sqlx.workspace = true
ulid.workspace = true
thiserror.workspace = true
