[package]
name = "imkitchen-shared"
version = "0.12.2"
edition.workspace = true
authors.workspace = true

[dependencies]
evento.workspace = true
bincode.workspace = true
anyhow.workspace = true
validator.workspace = true
argon2.workspace = true
sqlx.workspace = true
ulid.workspace = true
time.workspace = true
thiserror.workspace = true
