[package]
name = "imkitchen-shared"
version = "0.12.8"
edition.workspace = true
authors.workspace = true

[dependencies]
evento.workspace = true
bitcode.workspace = true
serde.workspace = true
strum.workspace = true
anyhow.workspace = true
validator.workspace = true
argon2.workspace = true
sqlx.workspace = true
time.workspace = true
thiserror.workspace = true
