[package]
name = "imkitchen-shopping"
version = "0.15.3"
edition.workspace = true
authors.workspace = true

[dependencies]
evento.workspace = true
bitcode.workspace = true
anyhow.workspace = true
validator.workspace = true
sqlx = { workspace = true }
sea-query.workspace = true
sea-query-sqlx.workspace = true
imkitchen-shared = { path = "../shared", version = "0.15.3" }
imkitchen-db = { path = "../db", version = "0.15.3" }
